change font and logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>UsWorks</title>
     <style>
         @import url('css/general-sans.css');
+        @import url('css/momentz.css');
+        @import url('css/catread.css');
         .general-sans-semi-bold {
             font-family: GeneralSans-Semibold;
         }
@@ -28,18 +30,18 @@
 <body class="overflow-x-hidden">
 	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.webp');">
 		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
-        	<h1 class="text-white text-4xl sm:text-7xl bg-blue bg-opacity-100 general-sans-semi-bold mt-20">UsWorks</h1>
+        	<h1 class="text-white text-4xl sm:text-7xl bg-blue bg-opacity-100 momentz mt-20">UsWorks</h1>
 			<br>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				Haiii.
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				Perkenalkan majalah UsWorks,
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				majalah literatur dan seni
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				yang dibagikan secara gratis.	
 			</p>
        	</div>
@@ -54,13 +56,13 @@
 	</div>
 	<div class="p-4 bg-pink">
 		<div class="flex flex-col items-center justify-center mb-20">
-        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold mt-20 text-center">
+        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 momentz mt-20 text-center">
 				Kami berkarya
 			</p>
-        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold text-center">
+        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 momentz text-center">
 				untuk kita bersama.
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
+        	<p class="text-blue text-sm sm:text-2xl catread mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				Kami berkarya, menaruh separuh jiwa kami di atas kertas, 
 				agar kita, Kakak dan kami, bisa menikmatinya bersama.
 				Membaca, lantas menangis dan tertawa bersama.
@@ -71,51 +73,51 @@
 	</div>
 	<div class="bg-cover w-full bg-fixed h-screen bg-bottom" style="background-image: url('img/sky.jpg');">
 		<div class="flex flex-col items-end justify-start mr-5 sm:p-20 h-screen">
-        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold mt-20">
+        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 momentz mt-20">
 				Kami ingin
 			</p>
-        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold">
+        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 momentz">
 				menghubungkan kita
 			</p>
-        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold">
+        	<p class="text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 momentz">
 				bersama.
 			</p>
 			<br>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				Kita. Para penggemar literatur
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				dan seni. Membahas 
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				cerita bersama, membahas
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				gambar dan ilustrasi bersama.
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				Mengirim <i>fanart</i>, <i>fanfiction</i>.
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+        	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				Terdengar menyenangkan, kan?
 			</p>
        	</div>
 	</div>
 	<div class="p-4">
 		<div class="flex flex-col items-center justify-center mb-20">
-        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold mt-20 text-center">
+        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 momentz mt-20 text-center">
 				Kami menjaga
 			</p>
-        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold">
+        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 momentz">
 				bungkus dan kejujuran
 			</p>
-        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold text-center">
+        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 momentz text-center">
 				dari karya.
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
+        	<p class="text-blue text-sm sm:text-2xl catread mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				Kejujuran yang dibungkus cantik. 
 			</p>
-        	<p class="text-blue text-sm sm:text-2xl general-sans-regular text-center max-wd-sm mx-auto sm:w-2/4">
+        	<p class="text-blue text-sm sm:text-2xl catread text-center max-wd-sm mx-auto sm:w-2/4">
 				Isi karya yang kami buat berasal jujur dari imajinasi dan hati.
 				Bungkusnya yang berupa kaedah-kaedah bahasa dan
 				tata letak bagaikan daun pisang segar yang disiapkan rapi.
@@ -127,23 +129,23 @@
 	<div class="h-screen">
 		<div class="bg-cover w-full h-1/2 sm:h-screen bg-center" style="background-image: url('img/hands.webp');">
 			<div class="flex flex-col items-center justify-center h-full">
-    	    	<p class="text-blue text-md sm:text-3xl general-sans-semi-bold">
+    	    	<p class="text-blue text-md sm:text-3xl momentz">
 					Mari bersama kita
 				</p>
-    	    	<p class="text-blue text-md sm:text-3xl general-sans-semi-bold">
+    	    	<p class="text-blue text-md sm:text-3xl momentz">
 					jajaki karya kita.
 				</p>
     	   	</div>
 		</div>
 		<div class="p-4">
 			<div class="flex flex-col items-start justify-top mt-10 sm:mt-20 sm:ml-10">
-    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold">
+    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
 					Jadi penulis atau <i>artist</i> 
 				</p>
-    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold">
+    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
 					di majalah UsWorks.
 				</p>
-    	    	<p class="text-blue text-sm sm:text-2xl general-sans-regular sm:w-2/4">
+    	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4">
 					Majalah UsWorks sedang menerima penulis atau <i>artist</i> yang ingin karyanya
 					dimuat rutin dalam majalah UsWorks. Atau cuma satu edisi juga boleh, kok!
 					Kakak bisa menulis cerbung/<i>series</i>, cerpen, atau bahkan artikel. 
@@ -152,27 +154,27 @@
 					Silakan buka <a class="text-blue-500" href="kontribusi.html"> artikel ini </a> untuk membaca selengkapnya.
 				</p>
 
-    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
 					Informasi tentang
 				</p>
-    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold">
+    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
 					pembagian majalah
 				</p>
-    	    	<p class="text-blue text-sm sm:text-2xl general-sans-regular sm:w-2/4">
+    	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4">
 					Majalah UsWorks umumnya dibagikan di <i>event-event</i> yang ada
 					di Padang. Edisi baru keluar dengan tidak menentu. Pokoknya saat semua karya
 					yang akan dimuat sudah siap, kami akan langsung membagikan majalah UsWorks di
 					<i>event-event</i> dalam waktu dekat.
 					Silakan baca selengkapnya <a class="text-blue-500" href="pembagian.html"> di sini</a>. 
 				</p>
-    	    	<p class="text-blue text-sm sm:text-2xl general-sans-regular sm:w-2/4 mt-3">
+    	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4 mt-3">
 					Walau begitu, Kakak bisa membaca versi daringnya saat sudah ada edisi yang keluar.
 				</p>
 
-    	    	<p id="kontak" class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	    	<p id="kontak" class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
 					Kontak
 				</p>
-    	    	<p class="text-blue text-sm sm:text-2xl general-sans-regular sm:w-2/4 mb-20">
+    	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4 mb-20">
 					Silakan hubungi Chi melalui <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
 					atau untuk respon lebih cepat, Rafliisme melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/rafliismewp/">rafliismewp</a>.
 				</p>
