--- a/kontribusi.html
+++ b/kontribusi.html
@@ -5,10 +5,9 @@
 	<link rel="shortcut icon" href="favicon.ico"/>
     <title>Berkontribusi - UsWorks</title>
     <style>
+        @import url('css/momentz.css');
+        @import url('css/catread.css');
         @import url('css/general-sans.css');
-        .general-sans-semi-bold {
-            font-family: GeneralSans-Semibold;
-        }
         .general-sans-regular {
             font-family: GeneralSans-Regular;
         }
@@ -26,13 +25,13 @@
 </head>
 <body class="overflow-x-hidden">
 	<div class="flex flex-col items-start justify-start ml-5 sm:p-4 h-screen">
-    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 momentz mt-10">
 			Menjadi penulis atau
 		</h1>
-    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 momentz">
 			<i>artist</i> di
 		</h1>
-    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 momentz">
 			majalah UsWorks
 		</h1>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
@@ -43,7 +42,7 @@
 			perhatian pada majalah UsWorks ini. Kami lagi mencari para penulis dan <i>artist</i> yang mau
 			bergabung di majalah UsWorks, nih! Berikut Chi jelaskan kegiatan-kegiatan kami.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
 			Pertama, tulis-menulis.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
@@ -77,7 +76,7 @@
 			Nah, bagaimana? Tertarikkah Kakak? Kalau begitu, 
 			silakan lihat bagian ketiga untuk detail tentang pengiriman lamaran.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
 			Kedua, gambar-menggambar.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
@@ -107,7 +106,7 @@
 			Siapkah Kakak untuk mengirimkan gambar terbaik Kakak ke majalah UsWorks? Silakan 
 			lihat bagian ketiga untuk detail cara mengirimkan lamaran.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
 			Ketiga, mengirimkan lamaran.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
@@ -176,7 +175,7 @@
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kami tunggu, ya!
 		</p>
-    	<h2 class="text-white text-md sm:text-1xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-md sm:text-1xl bg-blue bg-opacity-100 momentz mt-10">
 			Hak cipta dan lisensi.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
