--- a/pembagian.html
+++ b/pembagian.html
@@ -5,10 +5,9 @@
 	<link rel="shortcut icon" href="favicon.ico"/>
     <title>Dapatkan majalah - UsWorks</title>
     <style>
+        @import url('css/momentz.css');
+        @import url('css/catread.css');
         @import url('css/general-sans.css');
-        .general-sans-semi-bold {
-            font-family: GeneralSans-Semibold;
-        }
         .general-sans-regular {
             font-family: GeneralSans-Regular;
         }
@@ -26,10 +25,10 @@
 </head>
 <body class="overflow-x-hidden">
 	<div class="flex flex-col items-start justify-start ml-5 sm:p-4 h-screen">
-    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 momentz mt-10">
 			Mendapatkan majalah
 		</h1>
-    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 general-sans-semi-bold">
+    	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 momentz">
 			UsWorks.
 		</h1>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
@@ -47,7 +46,7 @@
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Kalau soal distribusi dan pembagian, untuk saat ini, kami mempunyai tiga sistem:
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
 			Pertama, pembagian gratis.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
@@ -58,7 +57,7 @@
 			majalah UsWorks. Silakan perkenalkan diri Kakak di sana dan tanyakan apapun yang ingin Kakak tanya.
 			Akan kami taruh <i>link</i>-nya di sini secepatnya.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
 			Kedua, pembelian.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
@@ -78,7 +77,7 @@
 			di sini
 			</a>.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 general-sans-semi-bold mt-10">
+    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
 			Ketiga, versi digital.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
