--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 		.bg-blue {
 			background-color: #63a6f6;	
 		}
+		.text-button:hover {
+			background-color: #4284D4;
+		}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -44,6 +47,9 @@
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				yang dibagikan secara gratis.	
 			</p>
+        	<a class="text-button text-white text-sm sm:text-2xl momentz mt-1 bg-blue" href="edisi.html"> 
+				<u> Edisi-Edisi UsWorks </u>
+			</a>
        	</div>
 		<div class="absolute bottom-4 right-4"> 
     	    <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
@@ -161,16 +167,12 @@
 					pembagian majalah
 				</p>
     	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4">
-					Majalah UsWorks umumnya dibagikan di <i>event-event</i> yang ada
+					Majalah UsWorks umumnya dibagikan di sirkel-sirkel kami dan <i>event-event</i> yang ada
 					di Padang. Edisi baru keluar dengan tidak menentu. Pokoknya saat semua karya
 					yang akan dimuat sudah siap, kami akan langsung membagikan majalah UsWorks di
-					<i>event-event</i> dalam waktu dekat.
+					<i>event-event</i> dalam waktu dekat dan membagikan ke teman-teman para kreator.
 					Silakan baca selengkapnya <a class="text-blue-500" href="pembagian.html"> di sini</a>. 
 				</p>
-    	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4 mt-3">
-					Walau begitu, Kakak bisa membaca versi daringnya saat sudah ada edisi yang keluar.
-				</p>
-
     	    	<p id="kontak" class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
 					Kontak
 				</p>
