--- a/pembagian.html
+++ b/pembagian.html
@@ -50,12 +50,15 @@
 			Pertama, pembagian gratis.
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Untuk sirkulasi di Padang, Sumatera Barat, majalah UsWorks umumnya dibagikan 
-			di <i>event-event</i> jejepangan atau 
-			<i>event-event</i> literatur dan beberapa
+			Untuk sirkulasi di Padang, Sumatera Barat, majalah UsWorks umumnya dibagikan di sirkel-sirkel 
+			kreator UsWorks, <i>event-event</i> jejepangan atau 
+			<i>event-event</i> literatur, dan beberapa
 			sekolah. Kami membagikan informasi-informasi terkait pembagian cetakan fisik di komunitas Whatsapp
 			majalah UsWorks. Silakan perkenalkan diri Kakak di sana dan tanyakan apapun yang ingin Kakak tanya.
-			Akan kami taruh <i>link</i>-nya di sini secepatnya.
+			Ini link komunitasnya:
+			<a class="text-blue-500" href="https://chat.whatsapp.com/DX7fmvET7kWBsZXdDjqQkp">
+				<u> https://chat.whatsapp.com/DX7fmvET7kWBsZXdDjqQkp </u>
+			</a>
 		</p>
     	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
 			Kedua, pembelian.
