add link to edisi 1

--- a/edisi.html
+++ b/edisi.html
@@ -24,6 +24,9 @@
 		.bg-blue {
 			background-color: #63a6f6;	
 		}
+		.text-button:hover {
+			background-color: #4284D4;
+		}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -54,13 +57,17 @@
 	    <p class="text-blue text-sm sm:text-lg catread">
 		Lalu ada gambar mistis ajaib nan indah dari <b>Yui</b>! Keren banget. Warnanya mencolok sekaligus santai dan enak dipandang!
 		</p>
-		<p class="mt-5">
-	    	<a class="text-white text-lg sm:text-3xl momentz bg-blue" href="#"> 
-				<u> Coming Soon! </u>
-			</a>
-		</p>
 	    <p class="text-blue text-sm sm:text-lg catread">
-			Bakal dibagiin di Bunkasai UNP tanggal 23! Versi digital bakal rilis di website ini sekitar seminggu setelahnya.
+		Silakan klik link di bawah ini untuk mengakses versi digital!
+		</p>
+		<p class="mt-5">
+	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="https://drive.proton.me/urls/EW9GS5RMZ0#sneJZZAc1JO6"> 
+				<u> Kualitas rendah (20MB)</u>
+			</a>
+			<br>
+	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="https://drive.proton.me/urls/NCQNBF4DWG#s2wSciN5TM6P"> 
+				<u> Kualitas tinggi (62MB)</u>
+			</a>
 		</p>
 	</div>
 </body>
