--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="overflow-x-hidden">
+	<div class="p-4">
+		<div class="flex flex-col items-center justify-center">
+        	<p class="text-blue text-sm sm:text-2xl catread text-center max-wd-sm mx-auto sm:w-2/4">
+				Ayo ikut sharing karya dan feedback Majalah UsWorks
+			</p>
+	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="event.html"> 
+				<u>Di sini!</u>
+			</a>
+		</div>
+	</div>
 	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.webp');">
 		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
         	<h1 class="text-white text-4xl sm:text-7xl bg-blue bg-opacity-100 momentz mt-20">UsWorks</h1>
@@ -60,7 +70,7 @@
 			</p>
     	</div>
 	</div>
-	<div class="p-4 bg-pink">
+	<div class="p-4">
 		<div class="flex flex-col items-center justify-center mb-20">
         	<p class="text-white text-2xl sm:text-2xl bg-blue bg-opacity-100 momentz mt-20 text-center">
 				Kami berkarya
