--- a/index.html
+++ b/index.html
@@ -183,6 +183,17 @@
 					<i>event-event</i> dalam waktu dekat dan membagikan ke teman-teman para kreator.
 					Silakan baca selengkapnya <a class="text-blue-500" href="pembagian.html"> di sini</a>. 
 				</p>
+
+    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
+					Visi misi dari
+				</p>
+    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
+					Majalah UsWorks
+				</p>
+    	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4">
+					Silakan baca visi misi dan prinsip majalah UsWorks <a class="text-blue-500" href="visi_misi.html"> di sini</a>. 
+					Tulisan yang dipajang di halaman itu menjadi pegangan bagi kami dalam menentukan setiap langkah yang akan kami ambil.
+				</p>
     	    	<p id="kontak" class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
 					Kontak
 				</p>
