fix minor issues

--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
 				</p>
 
     	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
-					Visi misi dari
+					Visi dan misi dari
 				</p>
     	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
 					Majalah UsWorks
 				</p>
     	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4">
-					Silakan baca visi misi dan prinsip majalah UsWorks <a class="text-blue-500" href="visi_misi.html"> di sini</a>. 
+					Silakan baca visi, misi, dan prinsip majalah UsWorks <a class="text-blue-500" href="visi_misi.html"> di sini</a>. 
 					Tulisan yang dipajang di halaman itu menjadi pegangan bagi kami dalam menentukan setiap langkah yang akan kami ambil.
 				</p>
     	    	<p id="kontak" class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
