--- a/visi_misi.html
+++ b/visi_misi.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="favicon.ico"/>
-    <title>Berkontribusi - UsWorks</title>
+    <title>Visi dan misi - UsWorks</title>
     <style>
         @import url('css/momentz.css');
         @import url('css/catread.css');
