no, we need money

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</a>
 		</div>
 	</div>
-	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.webp');">
+	<div class="relative bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.webp');">
 		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
         	<h1 class="text-white text-4xl sm:text-7xl bg-blue bg-opacity-100 momentz mt-20">UsWorks</h1>
 			<br>
@@ -72,18 +72,18 @@
 	</div>
 	<div class="p-4">
 		<div class="flex flex-col items-center justify-center mb-20">
-        	<p class="text-white text-2xl sm:text-2xl bg-blue bg-opacity-100 momentz mt-20 text-center">
-				Kami berkarya
+        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 momentz mt-20 text-center">
+				UsWorks adalah tempat
 			</p>
-        	<p class="text-white text-2xl sm:text-2xl bg-blue bg-opacity-100 momentz text-center">
-				untuk kita bersama.
+        	<p class="text-white text-2xl sm:text-4xl bg-blue bg-opacity-100 momentz text-center">
+				untuk tumbuh
 			</p>
         	<p class="text-blue text-sm sm:text-2xl catread mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
-				Kami berkarya, menaruh separuh jiwa kami di atas kertas, 
-				agar kita, Kakak dan kami, bisa menikmatinya bersama.
-				Membaca, lantas menangis dan tertawa bersama.
-				Kami tidak ingin uang. Bagi kami, bersenang-senang sambil mengarungi
-				lautan imajinasi bersama-sama lebih berharga daripada uang satu triliun pun.
+				UsWorks adalah komunitas kreator terbuka.
+				Kita berkarya, saling membagi feedback untuk karya satu sama lain.
+				Kita berkomunitas, saling membaca karya satu sama lain. 
+				Komunitas yang mendukung dan konstruktif.
+				Tempat untuk tumbuh, mengembangkan <i>skill</i> dan membangun <i>viewer base</i>.
 			</p>
 		</div>
 	</div>
