quick quick quick QUICK

--- a/event.html
+++ b/event.html
@@ -59,7 +59,13 @@
 		</p>
 		<p class="mt-5">
 	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="https://chat.whatsapp.com/DX7fmvET7kWBsZXdDjqQkp"> 
-				<u> Join grup WA UsWorks di sini!</u>
+				<u>Join grup WA UsWorks di sini!</u>
+			</a>
+	    	<span class="text-white text-lg sm:text-2xl momentz bg-blue"> 
+				Atau langsung kirim ke Rafliisme:
+			</span>
+	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="https://www.instagram.com/rafliismewp/"> 
+				Rafliisme melalui Instagram: @rafliismewp</a>.
 			</a>
 		</p>
 	</div>
