--- a/pembagian.html
+++ b/pembagian.html
@@ -44,49 +44,19 @@
 			edisi baru.
 		</p>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Kalau soal distribusi dan pembagian, untuk saat ini, kami mempunyai tiga sistem:
+			Kalau soal penerbitan, untuk saat ini, kami berfokus kepada edisi digital.
 		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
-			Pertama, pembagian gratis.
-		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Untuk sirkulasi di Padang, Sumatera Barat, majalah UsWorks umumnya dibagikan di sirkel-sirkel 
+			Untuk sirkulasi di Padang, Sumatera Barat, majalah UsWorks umumnya diiklankan dengan brosur yang 
+			mempunyai kode QR ke edisi majalah UsWorks terkini di di sirkel-sirkel 
 			kreator UsWorks, <i>event-event</i> jejepangan atau 
 			<i>event-event</i> literatur, dan beberapa
-			sekolah. Kami membagikan informasi-informasi terkait pembagian cetakan fisik di komunitas Whatsapp
+			sekolah. Kami membagikan informasi-informasi terkait pembagian brosur di komunitas Whatsapp
 			majalah UsWorks. Silakan perkenalkan diri Kakak di sana dan tanyakan apapun yang ingin Kakak tanya.
 			Ini link komunitasnya:
 			<a class="text-blue-500" href="https://chat.whatsapp.com/DX7fmvET7kWBsZXdDjqQkp">
 				<u> https://chat.whatsapp.com/DX7fmvET7kWBsZXdDjqQkp </u>
 			</a>
-		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
-			Kedua, pembelian.
-		</h2>
-    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Sayangnya, kalau Kakak ingin mempunyai cetakan fisik tanpa harus mengikuti kami di <i>event-event</i>,
-			Kakak bakal harus membeli majalah UsWorks. Maaf ya, cetakan fisik yang kami bagikan
-			terbatas.
-			Satu eksemplar berharga sekitar Rp 60.000
-			sampai Rp 70.000, belum dengan biaya pengiriman.
-			<b>Perlu diingat, kami sama sekali tidak mengambil
-				untung dari pembelian Kakak.</b> Uang yang Kakak bayarkan murni kami pergunakan untuk biaya 
-			percetakan dari satu cetakan majalah yang Kakak pesan beserta biaya pengirimannya.	
-			Kami menggunakan sistem percetakan laser, sehingga harga satu eksemplar kami jadi sedikit lebih mahal dibanding
-			dengan satu eksemplar yang dicetak dengan mesin cetak plat.
-			<b>Walau begitu, kalau stok masih tersedia, kami tetap akan memberikannya kepada Kakak secara cuma-cuma!</b>
-			Kalau Kakak tertarik untuk membeli, silakan hubungi Chi, ya! Kontak Chi tersedia 
-			<a class="text-blue-500" href="./index.html#kontak">
-			di sini
-			</a>.
-		</p>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-blue bg-opacity-100 momentz mt-10">
-			Ketiga, versi digital.
-		</h2>
-    	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Kalau Kakak tidak masalah membaca versi digital, kami menyediakan PDF dari majalah UsWorks yang bisa Kakak
-			unduh. Versi digital dari setiap edisi baru kami letakkan di situs ini seminggu setelah pembagian
-			cetakan fisik. Untuk saat ini, belum ada edisi yang keluar.
 		</p>
     </div>
 </body>
