--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 	<div class="p-4">
 		<div class="flex flex-col items-center justify-center">
         	<p class="text-blue text-sm sm:text-2xl catread text-center max-wd-sm mx-auto sm:w-2/4">
-				Ayo ikut sharing karya dan feedback Majalah UsWorks
+				Ayo ikuti art event tematis Majalah UsWorks
 			</p>
-	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="event.html"> 
-				<u>Di sini!</u>
+	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="art_event.html"> 
+				<u>di sini!</u>
 			</a>
 		</div>
 	</div>
