--- a/edisi.html
+++ b/edisi.html
@@ -70,5 +70,34 @@
 			</a>
 		</p>
 	</div>
+	<img class="w-screen w-full sm:w-1/2 sm:inline-block float-right" src="img/CoverEdisi2.png">
+	<div class="sm:inline-block sm:w-2/5 sm:align-top sm:mr-5 mr-5 float-right">
+	    <h1 class="inline-block text-white text-3xl sm:text-4xl bg-blue bg-opacity-100 momentz mt-10 float-right">Edisi 2 #Fight</h1>
+	    <p class="text-blue text-sm sm:text-2xl catread text-right clear-both">
+		Psst! Siapakah sang pengirim surat cinta untuk Bakku yang dikira homo itu? Mungkingkah keempat cewek yang "dekat" dengannya di <b>Pojok Kelas</b> mulai tertarik kepadanya?
+		</p>
+		<hr>
+	    <p class="text-blue text-sm sm:text-2xl catread text-right">
+		Lah, kok <b>Satria</b> malah diminta jadi <b>guru les</b> untuk teman sekelasnya yang baru masuk? Malah yang ia taksir pula!
+		</p>
+		<hr>
+	    <p class="text-blue text-sm sm:text-2xl catread text-right">
+		Gimana nih, keadaan si Hara yang pertama kali masuk sekolah sejak kakaknya meninggal? Yang jelas ia <b>Masih Hidup</b>
+		</p>
+		<hr>
+	    <p class="text-blue text-sm sm:text-2xl catread text-right">
+		Ada bunuh-bunuhan! Sayangnya kita tak tahu apakah itu <b>realita</b> atau <b>mimpi</b>.
+		</p>
+		<hr>
+	    <p class="text-blue text-sm sm:text-2xl catread text-right">
+		Gambar ber-style aesthetic-nya pastinya gak ketinggalan. Yang artstyle-nya keren-keren dan imut-imut juga ikut dong. Ada fanart. Ada juga OC. Bahkan ada juga fanart untuk OC.
+		Silakan klik link di bawah ini untuk versi digital-nya!
+		</p>
+		<p class="mt-5 text-right">
+	    	<a class="text-button text-white text-lg sm:text-2xl momentz bg-blue" href="https://drive.proton.me/urls/2G2V089B7G#tqMNuvZ8T43I"> 
+				<u> Download (50MB)</u>
+			</a>
+		</p>
+	</div>
 </body>
 </html>
