--- a/visi_misi.html
+++ b/visi_misi.html
@@ -46,7 +46,7 @@
 			Visi
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Menjadi media yang terbuka dan konstruktif bagi komunitas penyuka gaya seni UsWorks.
+			Mengembangkan budaya karya visual dan cerita yang dibanggakan Indonesia
 		</p>
 
     	<h2 class="text-blue text-1xl sm:text-3xl bg-opacity-100 catread mt-10">
