--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="overflow-x-hidden">
-	<div class="p-4">
+	<!--<div class="p-4">
 		<div class="flex flex-col items-center justify-center">
         	<p class="text-blue text-sm sm:text-2xl catread text-center max-wd-sm mx-auto sm:w-2/4">
 				Ayo ikuti art event tematis Majalah UsWorks
@@ -40,33 +40,30 @@
 				<u>di sini!</u>
 			</a>
 		</div>
-	</div>
+	</div>-->
 	<div class="relative bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.webp');">
 		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
         	<h1 class="text-white text-4xl sm:text-7xl bg-blue bg-opacity-100 momentz mt-20">UsWorks</h1>
 			<br>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
-				Haiii.
+				Haiii :D
 			</p>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
-				Perkenalkan majalah UsWorks,
+				Perkenalkan, kami UsWorks,
 			</p>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
-				majalah literatur dan seni
+				komunitas cerita dan semua karya visual.
 			</p>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
-				yang dibagikan secara gratis.	
+				Penyedia media bagi karyamu!
 			</p>
-        	<a class="text-button text-white text-sm sm:text-2xl momentz mt-1 bg-blue" href="edisi.html"> 
-				<u> Edisi-Edisi UsWorks </u>
-			</a>
        	</div>
 		<div class="absolute bottom-4 right-4"> 
     	    <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
     	        Arts by Yuzu Hoshizora
     	    </p>
     	    <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
-    	        Website by Chi
+    	        Website by Chi Hoshizora
 			</p>
     	</div>
 	</div>
@@ -80,8 +77,8 @@
 			</p>
         	<p class="text-blue text-sm sm:text-2xl catread mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				UsWorks adalah komunitas kreator terbuka.
-				Kita berkarya, saling membagi feedback untuk karya satu sama lain.
-				Kita berkomunitas, saling membaca karya satu sama lain. 
+				Kita berkarya, saling berbagi feedback untuk karya satu sama lain.
+				Kita berkomunitas, saling membaca dan melihat karya satu sama lain. 
 				Komunitas yang mendukung dan konstruktif.
 				Tempat untuk tumbuh, mengembangkan <i>skill</i> dan membangun <i>viewer base</i>.
 			</p>
@@ -103,7 +100,7 @@
 				Kita. Para penggemar literatur
 			</p>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
-				dan seni. Membahas 
+				dan art. Membahas 
 			</p>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
 				cerita bersama, membahas
@@ -112,10 +109,10 @@
 				gambar dan ilustrasi bersama.
 			</p>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
-				Mengirim <i>fanart</i>, <i>fanfiction</i>.
+				Mengirim lore OC, fanart, dan bahkan satu novel penuh.
 			</p>
         	<p class="text-blue text-sm sm:text-2xl bg-white bg-opacity-60 catread">
-				Terdengar menyenangkan, kan?
+				Seru, kan?
 			</p>
        	</div>
 	</div>
@@ -136,9 +133,10 @@
         	<p class="text-blue text-sm sm:text-2xl catread text-center max-wd-sm mx-auto sm:w-2/4">
 				Isi karya yang kami buat berasal jujur dari imajinasi dan hati.
 				Bungkusnya yang berupa kaedah-kaedah bahasa dan
-				tata letak bagaikan daun pisang segar yang disiapkan rapi.
+				tata letak, serta goresan tinta dan warna 
+				bagaikan daun pisang segar yang disiapkan rapi,
 				Editor kami berusaha keras untuk membuat karya yang dimuat di 
-				majalah UsWorks selalu seperti itu.
+				media-media UsWorks selalu seperti itu.
 			</p>
 		</div>
 	</div>
@@ -156,6 +154,16 @@
 		<div class="p-4">
 			<div class="flex flex-col items-start justify-top mt-10 sm:mt-20 sm:ml-10">
     	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
+					Media-media UsWorks
+				</p>
+    	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4">
+					Kami punya banyak media untuk menyebar karya anggota-anggota kami!
+					Ada <a class="text-blue-500" href="https://www.tiktok.com/@majalah.usworks"> Tiktok</a>, yang paling aktif.
+					Lalu ada majalah fisik yang dibagikan secara gratis saat event-event offline.
+					Dan yang masih <i>coming soon</i>, galeri online yang bakal kami taruh di website ini.
+				</p>
+
+    	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz mt-10">
 					Jadi penulis atau <i>artist</i> 
 				</p>
     	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
@@ -174,7 +182,7 @@
 					Informasi tentang
 				</p>
     	    	<p class="text-white text-md sm:text-4xl bg-blue bg-opacity-100 momentz">
-					pembagian majalah
+					pembagian majalah fisik
 				</p>
     	    	<p class="text-blue text-sm sm:text-2xl catread sm:w-2/4">
 					Majalah UsWorks umumnya dibagikan di sirkel-sirkel kami dan <i>event-event</i> yang ada
