update visi misi

--- a/visi_misi.html
+++ b/visi_misi.html
@@ -29,10 +29,10 @@
 			Profil Majalah UsWorks
 		</h1>
     	<h2 class="text-blue text-1xl sm:text-3xl bg-opacity-100 catread mt-10">
-			Apa Itu Majalah UsWorks?
+			Apa Itu UsWorks?
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Majalah UsWorks adalah media yang dipakai oleh komunitas seni yang menggunakan gaya tertentu untuk berbagi karya dan informasi.
+			UsWorks adalah fasilitator bagi komunitas cerita dan karya visual yang menggunakan gaya tertentu untuk berbagi karya dan informasi.
 		</p>
 
     	<h2 class="text-blue text-1xl sm:text-3xl bg-opacity-100 catread mt-10">
