update visi misi

--- a/visi_misi.html
+++ b/visi_misi.html
@@ -26,7 +26,7 @@
 <body class="overflow-x-hidden">
 	<div class="flex flex-col items-start justify-start ml-5 sm:p-4 h-screen">
     	<h1 class="text-white text-2xl sm:text-5xl bg-blue bg-opacity-100 momentz mt-10">
-			Profil Majalah UsWorks
+			Profil UsWorks
 		</h1>
     	<h2 class="text-blue text-1xl sm:text-3xl bg-opacity-100 catread mt-10">
 			Apa Itu UsWorks?
@@ -36,7 +36,7 @@
 		</p>
 
     	<h2 class="text-blue text-1xl sm:text-3xl bg-opacity-100 catread mt-10">
-			Bagaimana Gaya dari Majalah UsWorks?
+			Bagaimana Gaya dari UsWorks?
 		</h2>
     	<p class="text-blue text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Condong tapi tidak terbatas ke budaya pop indonesia dicampur terutama dengan budaya pop jepang atau bisa juga budaya pop lainnya.
